feat(leetcode/java): BinaryTree: handle nullable nums